--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <!-- Icon Title -->
     <link
       rel="icon"
-      href="assets/Title/IconTitle.png"
+      href="IconTitle.png"
       type=""
       class="IconTitle"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header" id="header">
-      <img src="assets/Picture/Header.jpeg" alt="" />
+      <img src="Header.jpeg" alt="" />
       <h1>Montaint Company Services</h1>
     </div>
     <div class="nav">
@@ -39,7 +39,7 @@
     <div class="service" id="gallery">
       <div class="box-service">
         <div class="image">
-          <img src="assets/Picture/Mainsection3.jpeg" alt="" />
+          <img src="Mainsection3.jpeg" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ullam
@@ -51,7 +51,7 @@
       </div>
       <div class="box-service">
         <div class="image">
-          <img src="assets/Picture/Mainsection2.jpeg" alt="" />
+          <img src="Mainsection2.jpeg" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ullam
@@ -63,7 +63,7 @@
       </div>
       <div class="box-service">
         <div class="image">
-          <img src="assets/Picture/Mainsection.jpeg" alt="" />
+          <img src="Mainsection.jpeg" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ullam
@@ -76,7 +76,7 @@
     </div>
 
     <div class="about" id="about">
-      <img src="assets/Picture/FotoKu.png" alt="" />
+      <img src="FotoKu.png" alt="" />
       <div class="text">
         <h3>Michelin Harosan Syadida</h3>
         <p>
